+ SDL/OpenGL, palette test #2, Makefile win/linux

--- a/CSonic/Makefile
+++ b/CSonic/Makefile
@@ -1,2 +1,8 @@
+ifdef SystemRoot
+	FLAGS = -lming32 -lSDLmain -lSDL -lopengl32
+else
+	FLAGS = -lSDL -lGL
+endif
+
 all:
-	gcc palette.c level.c main.c -o csonic
+	gcc palette.c level.c main.c -o csonic $(FLAGS)
