Edited Makefile, added joystick support

--- a/CPlatformer/Makefile
+++ b/CPlatformer/Makefile
@@ -3,12 +3,14 @@ COMPILER = gcc
 
 ifdef SystemRoot
 LIBS = -lmingw32 -lSDLmain -lSDL -lopengl32
+REMOVE = del
 else
 LIBS = -lSDL -lGL
+REMOVE = rm -rf
 endif
 
 all:
 	$(COMPILER) level.c character.c main.c -o $(EXECUTABLE_NAME) $(LIBS)
 
 clean:
-	rm -rf $(EXECUTABLE_NAME)
+	$(REMOVE) $(EXECUTABLE_NAME)
