--- a/CSonic/Makefile
+++ b/CSonic/Makefile
@@ -1,7 +1,13 @@
 ifdef SystemRoot
 	LINKS = -lming32 -lSDLmain -lSDL -lopengl32 -lglut
+	COPY = copy
+	MAKEDIR = mkdir
+	REMOVE = del
 else
 	LINKS = -lSDL -lGL -lglut
+	COPY = cp
+	MAKEDIR = mkdir -p
+	REMOVE = rm -rf
 endif
 
 SYSDIR = ./system
@@ -10,11 +16,11 @@ APPNAME = $(BUILDDIR)/csonic
 CFLAGS = -W -Wall -O3 -g
 
 all: stack.o linkedlist.o
-	mkdir -p $(BUILDDIR)
+	$(MAKEDIR) $(BUILDDIR)
 	gcc -o $(APPNAME) stack.o linkedlist.o palette.c level.c main.c $(LINKS) $(CFLAGS)
-	mkdir -p $(BUILDDIR)/data
-	mkdir -p $(BUILDDIR)/resources
-	cp ./resources/icon.bmp $(BUILDDIR)/resources/icon.bmp
+	$(MAKEDIR) $(BUILDDIR)/data
+	$(MAKEDIR) $(BUILDDIR)/resources
+	$(COPY) ./resources/icon.bmp $(BUILDDIR)/resources/icon.bmp
 
 stack.o: $(SYSDIR)/stack.c $(SYSDIR)/stack.h
 	gcc -o stack.o -c $(SYSDIR)/stack.c $(CFLAGS)
@@ -23,7 +29,7 @@ linkedlist.o: $(SYSDIR)/linkedlist.c $(SYSDIR)/linkedlist.h
 	gcc -o linkedlist.o -c $(SYSDIR)/linkedlist.c $(CFLAGS)
 
 clean:
-	rm -rf *.o
+	$(REMOVE) *.o
 
 delete: clean
-	rm -rf $(BUILDDIR)
+	$(REMOVE) $(BUILDDIR)
