--- a/CSonic/Makefile
+++ b/CSonic/Makefile
@@ -1,35 +1,53 @@
 ifdef SystemRoot
-	LINKS = -lming32 -lSDLmain -lSDL -lopengl32 -lglut
+	LINKS = -lmingw32 -lSDLmain -lSDL -lopengl32 -lglut32win
 	COPY = copy
 	MAKEDIR = mkdir
-	REMOVE = del
+	REMOVE = del /S /Q
+	DELDIR = rmdir /S /Q
+
+	DATADIR = build\data
+	RESOURCESDIR = build\resources
+
+	ICONPATH = resources\icon.bmp
+	ENDICONPATH = build\resources\icon.bmp
+	COPYSDL = copy SDL.dll build\SDL.dll
+
+	APPNAME = build\csonic.exe
 else
 	LINKS = -lSDL -lGL -lglut
 	COPY = cp
 	MAKEDIR = mkdir -p
-	REMOVE = rm -rf
+	REMOVE = rm -f
+	DELDIR = rm -rf
+
+	DATADIR = build/data
+	RESOURCESDIR = build/resources
+
+	ICONPATH = resources/icon.bmp
+	ENDICONPATH = build/resources/icon.bmp
+	COPYSDL = echo "Unecessary to copy SDL dlls."
+
+	APPNAME = build/csonic
 endif
 
-SYSDIR = ./system
-BUILDDIR = ./build
-APPNAME = $(BUILDDIR)/csonic
+SYSDIR = system
+BUILDDIR = build
+
 CFLAGS = -W -Wall -O3 -g
 
-all: stack.o linkedlist.o
-	$(MAKEDIR) $(BUILDDIR)
-	gcc -o $(APPNAME) stack.o linkedlist.o palette.c level.c main.c $(LINKS) $(CFLAGS)
-	$(MAKEDIR) $(BUILDDIR)/data
-	$(MAKEDIR) $(BUILDDIR)/resources
-	$(COPY) ./resources/icon.bmp $(BUILDDIR)/resources/icon.bmp
-
-stack.o: $(SYSDIR)/stack.c $(SYSDIR)/stack.h
-	gcc -o stack.o -c $(SYSDIR)/stack.c $(CFLAGS)
-
-linkedlist.o: $(SYSDIR)/linkedlist.c $(SYSDIR)/linkedlist.h
-	gcc -o linkedlist.o -c $(SYSDIR)/linkedlist.c $(CFLAGS)
+all: mkdirs
+	gcc -o $(APPNAME) palette.c level.c main.c $(LINKS) $(CFLAGS)
+	$(COPY) $(ICONPATH) $(ENDICONPATH)
+	$(COPYSDL)
 
 clean:
 	$(REMOVE) *.o
 
+mkdirs:
+	$(MAKEDIR) $(BUILDDIR)
+	cd $(BUILDDIR)
+	$(MAKEDIR) $(RESOURCESDIR)
+	$(MAKEDIR) $(DATADIR)
+
 delete: clean
-	$(REMOVE) $(BUILDDIR)
+	$(DELDIR) $(BUILDDIR)
