DSnake: updated makefile, added scrmngr module

--- a/DSnake-Basic/Makefile
+++ b/DSnake-Basic/Makefile
@@ -1,7 +1,22 @@
 D_COMPILER=dmd
+D_OBJ_FLAG=-c
 D_LIBS=-L-lDerelictUtil -L-lDerelictSDL2 -L-lDerelictGL3
 DEXEC_FLAG=-of
-EXEC=dsnakeb
+EXEC=dsnake
 
-all: main.d
-	$(D_COMPILER) main.d $(D_LIBS) $(DEXEC_FLAG)$(EXEC)
+.PHONY: clean
+
+all: main.o scrmngr.o
+	$(D_COMPILER) main.o scrmngr.o $(D_LIBS) $(DEXEC_FLAG)$(EXEC)
+
+main.o: main.d
+	$(D_COMPILER) $(D_OBJ_FLAG) main.d $(DEXEC_FLAG)main.o
+
+scrmngr.o: game/screenmanager.d
+	$(D_COMPILER) $(D_OBJ_FLAG) game/screenmanager.d $(DEXEC_FLAG)scrmngr.o
+
+clean:
+	rm -rf *.o
+
+delete: $(EXEC)
+	rm -f $(EXEC)
